set background and background variable

--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
   </header>
   <section id="main">
    <h1>Foodie Fun</h1>
-   <h3>This will be our slogan/tagline</h3>
+   <h3>Foodie? Rate your favorite dishes, eating spots, and experiences</h3>
   </section>
 
    <div class ="pimg">
