--- a/about.html
+++ b/about.html
@@ -29,24 +29,14 @@
        About Us!
    </h1>
    <h3>
-       We hope you enjoyed your experience using Foodie Fun!
+       Thanks for visiting Foodie Fun!
    </h3>
    </div>
    <div class="listItems">
-   <p>Our team is comprised of individuals working across the following cohorts at Lambda School:
-      We're Students who been at Lambda School for more than three months and were all putting our skills
-      to the test. Today we created website about making more food fun rather than being stressed about what
-      we eat and enjoy. We hope you like our project. We are proud to present you the studentd who made this 
-      website possible. 
+   <p>We are current students at Lambda School, and we're all putting our skills
+      to the test. We hope you like our project!
    </p>
-   <ul>
-       <li>UX/Design</li>
-       <li>Web/UI</li>
-       <li>Web/React</li>
-       <li>IOS</li>
-       <li>Back End Development</li>
-       <li>Project Lead</li>
-   </ul>
+   <br>
 </div>
 <div class="teamwork">
    <img src="images/teamwork.jpg" alt="teamwork">
