mobile and tablet views

--- a/html/about.html
+++ b/html/about.html
@@ -16,12 +16,12 @@
 <body>
    <div class="container">
 <header>
-   <nav>
+   <!-- <nav>
        <a href="index.html">Home</a>
        <a href="about.html">About</a>
        <a href="#">Blog</a>
        <a href="#">Contact</a>
-   </nav>
+   </nav> -->
 </header>
 <section id="mainAbout">
    <div class="aboutStuff">
@@ -29,39 +29,40 @@
        About Us!
    </h1>
    <h3>
-       We hope you enjoyed your experience using Foodie Fun!
+      Thank you for visiting Foodie Fun!
    </h3>
    </div>
+   
    <div class="listItems">
    <p>Our team is comprised of individuals working across the following cohorts at Lambda School:
-      We're Students who been at Lambda School for more than three months and were all putting our skills
-      to the test. Today we created website about making more food fun rather than being stressed about what
-      we eat and enjoy. We hope you like our project. We are proud to present you the studentd who made this 
-      website possible. 
+      We are current students at Lambda School and we're all putting our skills to the test. 
+       We hope you like our project. We are proud to present you the students who made this website/app possible. 
    </p>
-   <!-- <ul>
-       <li>UX/Design</li>
-       <li>Web/UI</li>
-       <li>Web/React</li>
-       <li>IOS</li>
-       <li>Back End Development</li>
-       <li>Project Lead</li>
-   </ul> -->
+   
 </div>
 <div class="teamwork">
    <img src="../img /teamwork.jpg" alt="teamwork">
-   <h4><a href=" https://github.com/KelseyRae21">UX/Design - Kelsey Adams</a></h4>
-   <h4><a href="https://github.com/marielapg"></a><a href="https://github.com/meowyadoin">Web/UI - Mariela Gonzales and Jess Novak</a></h4>
-   <h4><a href="https://github.com/ikeman32">Web/React - David Isakson and Emmanuel Tanifum</a></h4>
-   <h4><a href="#">IOS - Jesse Ruiz and Joshua Sharp</a></h4>
-   <h4><a href="https://github.com/ChrisPupo22">Back End Developer - Christopher Pupo</a></h4>
-   <h4><a href="https://github.com/heiligbasil">Project Lead - Basil Havens</a></h4>
+
+
+   <div class="teamwork-list">
+      <h4>UX/Design: <a href=" https://github.com/KelseyRae21">Kelsey Adams</a></h4>
+
+      <h4>Web/UI: <a href="https://github.com/marielapg">Mariela Gonzales </a>&<a href="https://github.com/meowyadoin">Jess Novak</a></h4>
+
+      <h4>Web/React:<a href="https://github.com/ikeman32"> David Isakson</a>&<a href= "https://github.com/Manny-Rocks">Emmanuel Tanifum</a></h4>
+
+      <h4>IOS:<a href="https://github.com/jesseleeruiz">Jesse Ruiz</a></h4>
+      
+      <h4>Back End Developer: <a href="https://github.com/ChrisPupo22">Christopher Pupo</a></h4>
+
+      <h4>Project Lead:<a href="https://github.com/heiligbasil">Basil Havens</a></h4>
    </div>
+</div>
 </section>
 
 <footer>
    <p>
-Copyright &copy; 2019 Foodie Fun
+   Copyright &copy; 2019 Foodie Fun
    </p>
 </footer>
 </div>
