--- a/html/index.html
+++ b/html/index.html
@@ -16,12 +16,12 @@
 </head>
 <body>
   <header>
-   <nav>
+   <!-- <nav>
      <a href="index.html">Home</a>
      <a href="about.html">About</a>
      <a href="#">Blog</a>
      <a href="#">Contact</a>
-   </nav>
+   </nav> -->
   </header>
   <section id="main">
    <h1>Foodie Fun</h1>
@@ -30,16 +30,6 @@
 
    <div class ="pimg">
    <img class ="pic" src="../img /macaroons.jpg" alt="macaroons">
-   <p>
-       This will be replaced with foodie fun facts and marketing info on wednesay<br>
-       This will be replaced with foodie fun facts and marketing info on wednesay<br>
-       This will be replaced with foodie fun facts and marketing info on wednesay<br>
-       This will be replaced with foodie fun facts and marketing info on wednesay<br>
-       This will be replaced with foodie fun facts and marketing info on wednesay<br>
-       This will be replaced with foodie fun facts and marketing info on wednesay<br>    
-       This will be replaced with foodie fun facts and marketing info on wednesay<br>
-       This will be replaced with foodie fun facts and marketing info on wednesay
-   </p>
   </div>
   
 <section id="signCreate">
