--- a/html/index.html
+++ b/html/index.html
@@ -16,16 +16,11 @@
 </head>
 <body>
   <header>
-   <!-- <nav>
-     <a href="index.html">Home</a>
-     <a href="about.html">About</a>
-     <a href="#">Blog</a>
-     <a href="#">Contact</a>
-   </nav> -->
+  
   </header>
   <section id="main">
    <h1>Foodie Fun</h1>
-   <h3>Foodie? Rate your favorite dishes, eating spots, and experiences</h3>
+   <h3>sFoodie? Rate your favorite dishes, eating spots, and experiences</h3>
   </section>
 
    <div class ="pimg">
